--- a/PRO-C41-template-main/index.html
+++ b/PRO-C41-template-main/index.html
@@ -18,14 +18,14 @@
 
 <script>
   // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyCJdlc8017r6FkQwpFhCqOauw62t797_9w",
-    authDomain: "fruit-catcher-5ad1e.firebaseapp.com",
-    databaseURL: "https://fruit-catcher-5ad1e-default-rtdb.firebaseio.com",
-    projectId: "fruit-catcher-5ad1e",
-    storageBucket: "fruit-catcher-5ad1e.appspot.com",
-    messagingSenderId: "993009870042",
-    appId: "1:993009870042:web:c7dc6bd802df06940971e3"
+  var firebaseConfig = {
+     apiKey: "AIzaSyBv4RQ9OmM7K0AaRwRIa-FpMO4XnRE9n3U",
+    authDomain: "c40pro-5d27f.firebaseapp.com",
+    databaseURL: "https://c40pro-5d27f-default-rtdb.firebaseio.com",
+    projectId: "c40pro-5d27f",
+    storageBucket: "c40pro-5d27f.appspot.com",
+    messagingSenderId: "251977638213",
+    appId: "1:251977638213:web:eda460a49becd074a75e2c"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
